[package]
name = "futex-queue"
version = "0.1.0"
authors = ["Jurgis Balciunas <chemicstry@gmail.com>"]
edition = "2021"
description = "An efficient MPSC queue with timer capability based on Linux futex. Suitable for real-time applications."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/chemicstry/futex-queue"
homepage = "https://github.com/chemicstry/futex-queue"
documentation = "https://docs.rs/futex-queue"
keywords = ["thread", "concurrency", "linux"]
categories = ["concurrency", "data-structures"]
readme = "README.md"

[dependencies]
linux-futex = "0.1"
heapless = "0.7"
